# scrutinize-me

./: .gitignore  AGENTS.md  README.md  multi-agent-code-review-template.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: smoke_installed_package.py
src/scrutinize_me_skill/: __main__.py  builder.py  cli.py
src/scrutinize_me_skill/skill/scrutinize-me/: SKILL.md
src/scrutinize_me_skill/skill/scrutinize-me/agents/: openai.yaml
src/scrutinize_me_skill/skill/scrutinize-me/evals/: evals.json
src/scrutinize_me_skill/skill/scrutinize-me/references/: orchestrator-playbook.md  output-schema.md  review-template.md  reviewer-personas.md
tests/: test_builder.py  test_cli.py  test_skill_content.py
